// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title.macro should transform a js file 1`] = `
"\\"use strict\\";

const meta = {
  default: \\"World/Hello\\",
  title: \\"World/Hello\\"
};"
`;

exports[`title.macro should transform a story file 1`] = `
"\\"use strict\\";

const meta = {
  default: \\"World/Example\\",
  title: \\"World/Example\\"
};"
`;
